Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55150

QLowEnergyController::connectToDevice() fails with Unknown error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.1
    • 5.7.0, 5.8.0
    • None
    • Ubuntu 14.04.5 LTS 64 bit

      Ubuntu 16.04.2 LTS 64 bit
       Qt 5.7.0, Qt 5.8.0
       bluez 4.101, bluez 5.37
       0a12:0001 Cambridge Silicon Radio, Ltd Bluetooth Dongle (HCI mode)

      I have problems connecting to multiple BLE devices on my machine.
      Tried one BlueGiga BLE121LR and the another NRF51822 based module.

      Device discovery and service and characteristic and descriptor dump works as expected with hcitool and gattool, so it should not be a HW issue. The device detection and service discovery works fine on OSX with the same library.

      I have tried it with both Public and Random remote address modes.

      I have enabled the logging of the qt.bluetooth.bluez and qt.bluetooth in the lowenergyscanner example with:

          QLoggingCategory::setFilterRules("*.debug=false\n"
                                           "qt.bluetooth.bluez.debug=true\n"
                                           "qt.bluetooth.debug=true");
      

      Here is the relevant output:

      qt.bluetooth.bluez: No settings found for peer device.
      qt.bluetooth.bluez: HCI event triggered, type: e
      qt.bluetooth.bluez: Unknown l2cp socket error:  QBluetoothSocket::UnknownSocketError "Invalid request code"
      Error:  "Unknown Error"
      qt.bluetooth.bluez: void QBluetoothSocketPrivate::_q_readNotify() 28 error: -1 "Resource temporarily unavailable"
      qt.bluetooth.bluez: Unknown l2cp socket error:  QBluetoothSocket::UnknownSocketError "Resource temporarily unavailable"
      Error:  "Unknown Error"
      Disconnect from device
      

      Let me know if I can provide additional details.

        For Gerrit Dashboard: QTBUG-55150
        # Subject Branch Project Status CR V

            ablasche Alex Blasche
            martonmiklos Miklós Márton
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes